@@ -25,6 +25,9 @@ Changes in detail
 - Added CWnd::ChildWindowFromPoint
 - Added CWnd::WindowFromPoint
 - Modified LoadString 				now returns CString
+- Modified CDC::CreateCompatibleDC	now takes a CDC pointer and attaches the DC
+- Modified CDC::CreateDC			now attaches the DC							
+- Modified CDC::CreateIC            now attaches the DC
 - Modified CDocker::IsChildOfDocker now takes a CWnd pointer instead of HWND
 - Modified CDocker::IsRelated 		now takes a CWnd pointer instead of HWND
 - Modified CWnd::GetAncestor		now accepts a gaFlags parameter
